--- a/polis-simulation/package.json
+++ b/polis-simulation/package.json
@@ -8,9 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "5.0.1",
     "recharts": "^2.12.7",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-range": "^1.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
