fix npm build for vercel

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
       {
         "src": "package.json",
         "use": "@vercel/static-build",
-        "config": { "distDir": "build" }
+        "config": { 
+          "distDir": "build",
+          "installCommand": "npm install react-scripts && npm install"
+        }
       }
     ],
     "routes": [
