--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
-    "test:silhouette": "jest src/__tests__/utils/silhouetteCoefficient.test.js",
+    "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
+    "test": "jest --config=jest.config.js",
+    "test:watch": "jest --watch --config=jest.config.js",
+    "test:coverage": "jest --coverage --config=jest.config.js",
+    "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand --config=jest.config.js",
+    "test:silhouette": "jest src/__tests__/utils/silhouetteCoefficient.test.js --config=jest.config.js",
     "eject": "react-scripts eject",
-    "cluster": "node --require @babel/register src/scripts/runClustering.js",
-    "cluster:debug": "node --require @babel/register src/scripts/runClustering.js --debug"
+    "cluster": "node -r @babel/register src/scripts/runClustering.js",
+    "cluster:debug": "node -r @babel/register src/scripts/runClustering.js --debug"
   },
   "eslintConfig": {
     "extends": [
@@ -43,18 +43,21 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.4",
-    "@babel/preset-react": "^7.24.7",
-    "@babel/register": "^7.24.6",
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/register": "^7.22.5",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.0",
     "babel-jest": "^29.7.0",
-    "jest": "^27.5.1"
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0"
   },
   "jest": {
-    "transform": {
-      "^.+\\.jsx?$": "babel-jest"
-    }
+    "testEnvironment": "jsdom",
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setupTests.js"
+    ]
   }
 }
